--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
     </button>
     <div class="menuContainer">
-        <a class="item" href="#">Basket</a>
-        <a class="item" href="#">Courses</a>
-        <a class="item" href="#">Account</a>
-        <a class="item" href="#">Logout</a>
+        <a class="item" href="#" target="_self">Basket</a>
+        <a class="item" href="#" target="_self">Courses</a>
+        <a class="item" href="#" target="_self">Account</a>
+        <a class="item" href="#" target="_self">Logout</a>
     </div>
    </div>
 </body>
