--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
     <button class="btn">
         <span class="spanClass"> User Profile</span>
         <div class="chevDownPic">
-        <img src="./images//chevDown.svg" class="imgClass">
+        <img  class="imgClass" src="./images//chevDown.svg">
         </div>
     </button>
     <div class="menuContainer">
